Mouse press event fix & mouse wheel support

--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -977,7 +977,7 @@ QtLogic.prototype = {
                             x:eventData.x,
                             y:eventData.y,
                             modifiers:eventData.modifiers,
-                            delta:delta,
+                            delta:delta * 120,
                             orientation:eventData.orientation
                         });
                     }
