--- a/src/server/canvas.html
+++ b/src/server/canvas.html
@@ -403,6 +403,7 @@ WSConnector.prototype = {
                 WebSocket = MozWebSocket;
             this.websocket = new WebSocket(this.wsUri);
             socket = this.websocket;
+
             this.websocket.onopen = function () {
                 debug('Connected');
             };
@@ -424,6 +425,7 @@ WSConnector.prototype = {
             };
             this.websocket.onclose = function (evt) {
                 debug('Connection closed.');
+                alert('Con closed');
             };
         } catch (exception) {
             debug('ERROR: ' + exception);
